[project]
name = "leviathanmatrix-aep-open-core"
version = "0.1.0"
description = "Open execution-control infrastructure for Web4 agents with policy-bound authorization, Execution Passes, Capital Capsules, receipts, and reviewable actions"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
